@@ -1,3 +1,4 @@
+Adjusted energy chunks mapping algorithms and some of the model object parameters such that all objects will receive an energy chunk after a small amount of heating.
 Fixed an issue where energy chunks could, in some cases, appear to get stuck on the outside of a container.
 Removed code that was previously used to make energy chunks fade in and out, since it is no longer used.
 Removed a number of images that are no longer used.  This should reduce startup time.
